<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.viewedit.EditRestFrag">


    <ImageView
        android:background="@drawable/default_food"
        android:id="@+id/imgViewHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="@font/chineserocksrg"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:id="@+id/ev_rest_name"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chineserocksrg"
        android:text="@string/name_default"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgViewHeader" />

    <EditText
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:id="@+id/ev_rest_hours"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chineserocksrg"
        android:text="@string/rest_name_default"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ev_rest_name" />

    <EditText
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:id="@+id/ev_rest_location"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chineserocksrg"
        android:text="@string/location_default"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ev_rest_hours" />

    <EditText
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:id="@+id/ev_rating"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chineserocksrg"
        android:text="@string/rating_default"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ev_rest_location" />

    <Button
        android:textSize="25sp"
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_shape_capsule"
        android:fontFamily="@font/chineserocksrg"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete" />

    <Button
        android:textSize="25sp"
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_shape_capsule"
        android:fontFamily="@font/chineserocksrg"
        android:padding="15dp"
        android:text="@string/delete"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>