<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/login_layout"

    >


<LinearLayout
        android:id="@+id/home_ll"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chineserocksrg"
            android:text="@string/foodie_fun"
            android:textColor="@color/colorAccent"
            android:textSize="50sp" />



    </LinearLayout>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/input_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_ll" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/chineserocksrg"
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/username"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/chineserocksrg"
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:hint="@string/password"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button

            android:background="@drawable/btn_shape_capsule"
            android:fontFamily="@font/chineserocksrg"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:id="@+id/button_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAllCaps="true"
           android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />


        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:rotation="180"
            app:mwhCloseColor="@color/colorPrimary"
            app:mwhStartColor="@color/colorPrimary"
            app:mwhWaves="
            70,25,1.4,1.4,-26
            100,5,1.4,1.2,15
            420,0,1.15,1,-10
            520,10,1.7,1.5,20
            220,0,1,1,-15" />


    </LinearLayout>




<include
        android:id="@+id/registration_layout"
        layout="@layout/activity_registration"
        android:visibility="gone"

        />



</androidx.constraintlayout.widget.ConstraintLayout>